# ProgrammersBrainChatBot

./: .gitignore  animus.py  brain.py  dockerfile  mydata.jsonl  nerves.py  pyproject.toml
static/: script.js  styles.css
templates/: chat_template.html
