[tool.poetry]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = ["AlwaysSayingPleaseAndThankYou <aengus.crowley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.0"
langchain = "^0.0.279"
pypdf = "^3.15.4"
chromadb = "^0.4.8"
tiktoken = "^0.4.0"
jinja2 = "^3.1.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
panel = "^1.2.2"
pytesseract = "^0.3.10"
pypdfium2 = "^4.19.0"
llama-index = "^0.8.22"
unstructured = "^0.10.12"
pdf2image = "^1.16.3"
pdfminer = "^20191125"
pdfminer-six = "^20221105"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
